tdf#114163 Chart: fix order of legend names

Respecting the axis direction in case of
normal/stacked/percent stacked Bar chart and
the legend names will be in the right order.

Change-Id: If782393a33e48dae32f919d137e1d1148a85b0b0
Reviewed-on: https://gerrit.libreoffice.org/64632
Tested-by: Jenkins
Reviewed-by: Bartosz Kosiorek <gang65@poczta.onet.pl>
(cherry picked from commit 40144617ce05d7eff86eeb8a412c6991fe0b819e)