sw/qa/extras/layout/layout.cxx
@@ -40,6 +40,7 @@ public:
     void testRedlineTables();
     void testRedlineCharAttributes();
     void testTdf116830();
+    void testTdf114163();
     void testTdf116925();
     void testTdf117028();
     void testTdf106390();
@@ -73,6 +74,7 @@ public:
     CPPUNIT_TEST(testRedlineTables);
     CPPUNIT_TEST(testRedlineCharAttributes);
     CPPUNIT_TEST(testTdf116830);
+    CPPUNIT_TEST(testTdf114163);
     CPPUNIT_TEST(testTdf116925);
     CPPUNIT_TEST(testTdf117028);
     CPPUNIT_TEST(testTdf106390);
@@ -2297,6 +2299,24 @@ void SwLayoutWriter::testTdf116830()
     assertXPath(pXmlDoc,
                 "/metafile/push[1]/push[1]/push[1]/push[3]/push[1]/fillcolor[@color='#ffff00']", 1);
     assertXPath(pXmlDoc, "/metafile/push[1]/push[1]/push[1]/push[3]/push[1]/rect", 1);
+}
+
+void SwLayoutWriter::testTdf114163()
+{
+    SwDoc* pDoc = createDoc("tdf114163.odt");
+    SwDocShell* pShell = pDoc->GetDocShell();
+
+    // Dump the rendering of the first page as an XML file.
+    std::shared_ptr<GDIMetaFile> xMetaFile = pShell->GetPreviewMetaFile();
+    MetafileXmlDump dumper;
+    xmlDocPtr pXmlDoc = dumper.dumpAndParse(*xMetaFile);
+    CPPUNIT_ASSERT(pXmlDoc);
+
+    assertXPathContent(
+        pXmlDoc,
+        "/metafile/push[1]/push[1]/push[1]/push[3]/push[1]/push[1]/push[1]/textarray[12]/text",
+        "Data3");
+    // This failed, if the legend first label is not "Data3".
 }
 
 void SwLayoutWriter::testTdf116925()
